--- a/frontend/src/app/auth/components/login-component/login-component.html
+++ b/frontend/src/app/auth/components/login-component/login-component.html
@@ -11,7 +11,14 @@
         <h5 class="login-subtitle">Bon retour parmi nous !</h5>
       </div>
 
-      <form class="login-form">
+      @if (errorMessage){
+        <div class="alert alert-danger" role="alert">
+          {{ errorMessage }}
+        </div>
+      }
+
+
+      <form class="login-form" (submit)="onSubmit($event)">
         <div class="form-group">
           <label for="email">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -61,7 +68,7 @@
               Se souvenir de moi
             </label>
           </div>
-          <a href="#" class="forgot-password">Mot de passe oublié ?</a>
+          <a class="forgot-password" (click)="onForgotPassword()">Mot de passe oublié ?</a>
         </div>
 
         <button type="submit" class="btn btn-success w-100 mt-4">
@@ -75,7 +82,7 @@
       </form>
 
       <div class="register-link">
-        <p>Vous n'avez pas de compte ? <a href="#" id="registerLink">S'inscrire</a></p>
+        <p>Vous n'avez pas de compte ? <a id="registerLink" (click)="openRegister()">S'inscrire</a></p>
       </div>
     </div>
 
