--- a/frontend/src/app/shared/components/sidebar-component/sidebar.component.html
+++ b/frontend/src/app/shared/components/sidebar-component/sidebar.component.html
@@ -5,12 +5,12 @@
   (click)="toggleSidebar()">
 </div>
 
-<!-- Toggle Button - Positionné à droite -->
+<!-- Toggle Button -->
 <button
   class="sidebar-toggle-btn"
   (click)="toggleSidebar()"
   [class.expanded]="isExpanded || mobileOpen"
-  [class.collapsed]="!isExpanded && !mobileOpen"
+  [class.collapsed]="!isExpanded && !isMobile && !mobileOpen"
   [attr.aria-label]="isExpanded || mobileOpen ? 'Fermer le menu' : 'Ouvrir le menu'">
   <span class="toggle-icon">
     <span></span>
@@ -29,7 +29,6 @@
   <!-- Header -->
   <div class="sidebar-header">
     <div class="logo">
-
     </div>
   </div>
 
@@ -39,18 +38,19 @@
       <li
         *ngFor="let item of menu"
         class="sidebar-item"
-        [class.has-children]="item.children && item.children.length > 0">
+        [class.has-children]="item.children && item.children.length > 0"
+        [class.dropdown-open]="isOpen(item.name)">
 
         <!-- Lien simple (sans enfants) -->
         <a
-        *ngIf="!item.children || item.children.length === 0"
-        [routerLink]="item.url"
-        class="sidebar-link"
-        routerLinkActive="active"
-        [title]="(!isExpanded && !isMobile) ? item.name : ''">
-        <i [class]="item.icon" class="sidebar-icon"></i>
-        <span class="sidebar-text" *ngIf="isExpanded || isMobile">{{ item.name }}</span>
-        <span class="tooltip" *ngIf="!isExpanded && !isMobile">{{ item.name }}</span>
+          *ngIf="!item.children || item.children.length === 0"
+          [routerLink]="item.url"
+          class="sidebar-link"
+          routerLinkActive="active"
+          [title]="(!isExpanded && !isMobile) ? item.name : ''">
+          <i [class]="item.icon" class="sidebar-icon"></i>
+          <span class="sidebar-text" *ngIf="isExpanded || isMobile">{{ item.name }}</span>
+          <span class="tooltip" *ngIf="!isExpanded && !isMobile">{{ item.name }}</span>
         </a>
 
         <!-- Lien avec sous-menu -->
@@ -62,23 +62,29 @@
             [title]="(!isExpanded && !isMobile) ? item.name : ''">
             <i [class]="item.icon" class="sidebar-icon"></i>
             <span class="sidebar-text" *ngIf="isExpanded || isMobile">{{ item.name }}</span>
+            <!-- Flèche visible seulement en mode expanded -->
             <i
               class="fas fa-chevron-down dropdown-arrow"
               *ngIf="isExpanded || isMobile"
               [class.open]="isOpen(item.name)">
             </i>
+            <!-- En collapsed : petite pastille indiquant les children -->
+            <span class="collapsed-indicator" *ngIf="!isExpanded && !isMobile"></span>
             <span class="tooltip" *ngIf="!isExpanded && !isMobile">{{ item.name }}</span>
           </button>
 
-          <!-- Sous-menu -->
-          <ul class="sidebar-submenu" [class.open]="isOpen(item.name) && (isExpanded || isMobile)">
+          <!-- Sous-menu inline - visible en mode expanded/mobile -->
+          <ul
+            class="sidebar-submenu"
+            *ngIf="isExpanded || isMobile"
+            [class.open]="isOpen(item.name)">
             <li *ngFor="let child of item.children" class="sidebar-subitem">
               <a
-              [routerLink]="child.url"
-              class="sidebar-sublink"
-              routerLinkActive="active">
-              <i [class]="child.icon" class="sidebar-icon"></i>
-              <span class="sidebar-text">{{ child.name }}</span>
+                [routerLink]="child.url"
+                class="sidebar-sublink"
+                routerLinkActive="active">
+                <i [class]="child.icon" class="sidebar-icon"></i>
+                <span class="sidebar-text">{{ child.name }}</span>
               </a>
             </li>
           </ul>
@@ -91,19 +97,52 @@
   <!-- Footer avec déconnexion -->
   <div class="sidebar-footer" *ngIf="userConnected && userConnected.email">
     <div class="user-section" *ngIf="isExpanded || isMobile">
-      <div class="user-avatar">
-        {{ getUserInitials() }}
-      </div>
+      <div class="user-avatar">{{ getUserInitials() }}</div>
       <div class="user-details">
         <span class="user-name">{{ userConnected.username || userConnected.email }}</span>
         <span class="user-role">{{ userConnected.role }}</span>
       </div>
     </div>
 
-    <button class="logout-btn" (click)="logout()" [title]="(!isExpanded && !isMobile) ? 'Déconnexion' : ''">
+    <button
+      class="logout-btn"
+      (click)="logout()"
+      [title]="(!isExpanded && !isMobile) ? 'Déconnexion' : ''">
       <i class="fas fa-sign-out-alt logout-icon"></i>
       <span *ngIf="isExpanded || isMobile">Déconnexion</span>
       <span class="tooltip" *ngIf="!isExpanded && !isMobile">Déconnexion</span>
     </button>
   </div>
 </aside>
+
+<!-- FLYOUT CONTAINER - En dehors de la sidebar pour le mode collapsed -->
+<div
+  class="flyout-container"
+  *ngIf="!isExpanded && !isMobile"
+  [class.visible]="activeFlyout !== null">
+
+  <div
+    *ngFor="let item of menu"
+    class="flyout-menu"
+    [class.active]="isOpen(item.name) && item.children && item.children.length > 0"
+    [style.top.px]="getFlyoutPosition(item.name)">
+
+    <div class="flyout-header" *ngIf="isOpen(item.name)">
+      <i [class]="item.icon" class="sidebar-icon"></i>
+      <span>{{ item.name }}</span>
+    </div>
+
+    <ul class="flyout-submenu" *ngIf="isOpen(item.name)">
+      <li *ngFor="let child of item.children" class="flyout-subitem">
+        <a
+          [routerLink]="child.url"
+          class="flyout-sublink"
+          routerLinkActive="active"
+          (click)="closeFlyout()">
+          <i [class]="child.icon" class="sidebar-icon"></i>
+          <span>{{ child.name }}</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
